# Sensata

./: .gitignore  .gitmodules  README.md  api_routes.txt  chatgpt_query_design_response.txt  database_schema.sql  sensorcode+db.txt
api/: .env  README.md  main.py  models.py  pyproject.toml  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 0f33bd639aa7_remove_nullability_on_time_added.py  15dab0de5718_migrate_to_more_correct_datatypes.py  16b0f3d54ea4_initial_migration.py  1e9da2012aed_initial_migration.py  53ba04d9c52a_add_session_token_row.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
frontend/src/: App.tsx  ForgotPassword.tsx  Login.css  dashboard.tsx  index.css  login.tsx  main.tsx  sign-up_page.tsx
frontend/src/assets/: SensorSelect.css  SensorType.tsx  dashboard.css  navbar.css
frontend/src/components/: Navbar.tsx
frontend/src/components/dashboard/: BarChart.tsx  LineChart.tsx  SensorSelect.tsx
raspberrypi/: sensorcode+api.py
sensata-documentation/: README.md
