[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi-utils>=0.7.0",
    "fastapi[standard]>=0.115.4",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.22",
    "typing-inspect>=0.9.0",
    "typing>=3.10.0.0",
]
